--- a/account_journal_list_product/view/account_view.xml
+++ b/account_journal_list_product/view/account_view.xml
@@ -2,6 +2,7 @@
 <openerp>
 	<data>
 
+		
 		<record id="view_move_line_tree" model="ir.ui.view">
 			<field name="name">account.move.line.list.product</field>
 			<field name="model">account.move.line</field>
@@ -13,5 +14,18 @@
 				</xpath>
 			</field>
 		</record>
+		
+		<record id="view_move_line_tree_wiz" model="ir.ui.view">
+			<field name="name">account.move.line.list.product.wiz</field>
+			<field name="model">account.move.line</field>
+			<field name="type">tree</field>
+			<field name="inherit_id" ref="account_payment.view_move_line_tree_wiz"" />
+			<field name="arch" type="xml">
+				<xpath expr="//field[@name='period_id']" position="after">
+					<field name="product_id" />
+				</xpath>
+			</field>
+		</record>
+		
 	</data>
 </openerp>
