--- a/account_journal_list_product/view/account_view.xml
+++ b/account_journal_list_product/view/account_view.xml
@@ -19,7 +19,7 @@
 			<field name="name">account.move.line.list.product.wiz</field>
 			<field name="model">account.move.line</field>
 			<field name="type">tree</field>
-			<field name="inherit_id" ref="account_payment.view_move_line_tree_wiz"" />
+			<field name="inherit_id" ref="account_payment.view_move_line_tree_wiz" />
 			<field name="arch" type="xml">
 				<xpath expr="//field[@name='period_id']" position="after">
 					<field name="product_id" />
